# build-your-own

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
3d-renderer/: readme.md
AR/: readme.md
data-structures-and-algorithms/: readme.md
data-structures-and-algorithms/C/: main  main.c
data-structures-and-algorithms/DSA/: DSA.sln
data-structures-and-algorithms/DSA/DSA/: DSA.vcxproj  DSA.vcxproj.filters  main.cpp
database/: readme.md
database/SQLiteC++/SQLiteClone/: BTree.h  Page.h  Pager.h  Row.h  SQLiteClone.vcxproj  SQLiteClone.vcxproj.filters  Table.cpp  Table.h  backend.cpp  backend.h  core.cpp  core.h  db.cpp  main.cpp  util.h
database/SQLiteClone/: SQLiteClone.sln
database/SQLiteClone/SQLiteClone/: BTree.cpp  BTree.h  Cursor.cpp  Cursor.h  Pager.cpp  Pager.h  SQLiteClone.vcxproj  SQLiteClone.vcxproj.filters  Statement.cpp  Statement.h  Table.cpp  Table.h  db.cpp  util.h
database/SQLiteJava/src/: DB.java
deep-learning-library/: fizzbuzz.py  readme.md  xor.py
deep-learning-library/arknet/: data.py  layers.py  loss.py  nn.py  optim.py  tensor.py  train.py
fluid-sim/FluidSim/: FluidSim.sln  FluidSim.vcxproj  main.cpp
fluid-sim/FluidSimulation/: FluidSimulation.sln  FluidSimulation.vcxproj  main.cpp
fluid-sim/VectorFieldFluidSimulation/: VectorFieldFluidSimulation.vcxproj  main.cpp
game-engine/: readme.md
game-engine/EmergentWorlds/: build.gradle  settings.gradle
game-engine/EmergentWorlds2D/: EmergentWorlds2D.sln
game-engine/Mario/: build.gradle  imgui.ini  settings.gradle
gameboy-emulator/: readme.md
n-body-sim/: readme.md
n-body-sim/NBody/: .gitignore  NBody.vcxproj  NBody.vcxproj.filters  raylib.vcxproj  raylib.vcxproj.filters
n-body-sim/NBody/src/: Body.cpp  Body.h  v1.cpp  (+16 more)
neural-network/: readme.md
physics-engine/: .gitignore  CMakeLists.txt  readme.md
physics-engine/MonoPhysics/: MonoPhysics.sln
physics-engine/MonoPhysics/Flat/Graphics/: Sprites.cs
physics-engine/MonoPhysics/Sandbox/: Game1.cs  Sandbox.csproj
physics-engine/MonoPhysics/Sandbox/Content/: Content.mgcb
physics-engine/PhysicsEngine/: PhysicsEngine.sln
physics-engine/PhysicsEngine/PhysicsEngine/: PhysicsEngine.vcxproj  Vector.cpp  Vector.h
physics-engine/PhysicsEngine/Sandbox/: Application.cpp  Application.h  Main.cpp  Sandbox.vcxproj
physics-engine/src/: Collision.h  Entity.h  RigidBody.cpp  RigidBody.h  Scene.cpp  Scene.h  Transform.h  Vec.h  main.cpp
recommendation-engine/: readme.md
search-engine/: readme.md
voxel-engine/: .gitignore  CMakeLists.txt  build.bat  main.cpp  readme.md
voxel-engine/VoxelEngine/: VoxelEngine.sln
voxel-engine/VoxelEngine/VoxelEngine/: VoxelEngine.vcxproj
voxel-engine/VoxelEngine/VoxelEngine/src/: Application.cpp
voxel-engine/cmake/: FetchRaylib.cmake
voxel-engine/src/: main.cpp
voxel-engine/src/engine/: Chunk.cpp  Chunk.h  Engine.cpp  Engine.h  FreeCamera.cpp  FreeCamera.h  Input.cpp  Input.h  Renderer.cpp  Renderer.h  Voxel.cpp  Voxel.h  World.cpp  World.h
(+115 files in other folders)
